--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Attawit Kittikrairit",
+  "author": "Attawit Kittikrairit <atton16@gmail.com> (https://attawit.me/)",
+  "homepage": "https://github.com/atton16/gitlab-get-docker-image-version#gitlab-get-docker-image-version",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/atton16/gitlab-get-docker-image-version.git"
+  },
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.11",
