--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type": "git",
     "url": "https://github.com/atton16/gitlab-get-docker-image-version.git"
   },
+  "keywords": ["GitLab", "GitLab CI", "CI/CD", "CI", "CD", "docker", "semver"],
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.11",
